# scatter-store

./: .gitignore  README.md  build.gradle.kts  package-lock.json  package.json  settings.gradle.kts  tailwind.config.ts
gradle/wrapper/: gradle-wrapper.properties
src/: app.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  models.rs
src-tauri/src/db/: cmd_handler.rs
src/components/: Navbar.svelte
src/main/kotlin/: Config.kt  Main.kt  Split.kt  Types.kt  Utils.kt
src/main/kotlin/configuration/: ConfigAccess.kt  ConfigFile.kt  DB.kt
src/main/kotlin/encryption/: Encryption.kt  EncryptionAES.kt  EncryptionAbstract.kt
src/main/kotlin/providers/: Provider.kt  ProviderFTP.kt
src/main/kotlin/scatterstore/: Main.kt  Types.kt  Utils.kt
src/main/kotlin/scatterstore/configuration/: ConfigAccess.kt  DB.kt
src/main/kotlin/scatterstore/encryption/: EncryptionAES.kt  EncryptionAbstract.kt
src/main/kotlin/scatterstore/providers/: Provider.kt  ProviderFTP.kt
src/main/kotlin/splitting/: JoinFile.kt  SplitFile.kt
src/main/resources/: scatter-store.json
src/routes/: +layout.svelte  +page.svelte
src/routes/about/: +page.svelte
src/routes/providers/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/shares/: +page.svelte
src/routes/shares/create/: +page.svelte
src/test/ftp/: docker-compose.yml
src/test/ftp/configs/: sftp1.json  sftp2.json  sftp3.json
src/test/resources/: docker-compose.yml
src/test/resources/encryption/: to-decrypt-1.txt  to-decrypt-2.txt  to-encrypt-2.txt
(+19 files in other folders)
