[package]
name = "scatter-store"
version = "0.0.0"
description = "Scatter around your files"
authors = ["Philipp Schuetz"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["dialog-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2.2.1", features = ["sqlite"] }
uuid = { version = "1.10.0", features = ["v4"] } #, "fast-rng", "macro-diagnostics"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
